@@ -7,6 +7,7 @@ sunuo (0.1.9) unstable; urgency=low
   * home page changed to http://www.sunuo.org/
   * the mailing list is now hosted on BerliOS
   * added option to disable a script library
+  * added option to set the C# compiler's warning level
 
  --
 
